<resources>
    <string name="app_name" translatable="false">Rod</string>
    <string name="start">start</string>
    <string name="host">Host</string>
    <string name="port1">Video port</string>
    <string name="port2">Mouse port</string>
    <string name="settings">Settings</string>
    <string name="screenshotDescription">Screenshot from the server</string>
    <string name="addRSAKeyDescription">AddRSAKey</string>
    <string name="theNameOfTheKey">The name of the key</string>
    <string name="confirm">confirm</string>
    <string name="ManageRSAKeys">Manage RSA keys</string>
    <string name="ManageConfigurations">Manage Configurations</string>
    <string name="emptyNameRemind">Please enter a name for the key</string>
    <string name="Delete">Delete</string>
    <string name="showKey">Show public key</string>
    <string name="deleteRemindTitle">delete remind</string>
    <string name="deleteRemindMessage">Are you sure you want to delete it</string>
    <string name="cancel">cancel</string>
    <string name="copy">copy</string>
    <string name="publicKey">public key</string>
    <string name="copied">Public key is copied</string>
    <string name="addConfigurationDescription">Add configuration</string>
    <string name="ConfigurationName">configuration name</string>
    <string name="useKey">"Use key: "</string>
    <string name="defaultKeyName">Default key(UNSAFE)</string>
    <string name="noCommaRemind">cannot contain \",\"</string>
    <string name="emptyHostRemind">Please enter a host</string>
    <string name="emptyPort1Remind">Please enter video port</string>
    <string name="emptyPort2Remind">Please enter mouse port</string>
    <string name="toSetting">Go to setting</string>
    <string name="noConfigurationRemind">You have not set the configuration, please click the button to go to Settings...</string>
    <string name="chooseConfigurationRemind">Please choose a configuration</string>
</resources>